Closed Bug 394547 Opened 18 years ago Closed 18 years ago

Giving focus to a tree in an autocomplete causes absence of future caret-moved events for the entry

Categories

(Core :: Disability Access APIs, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jdiggs, Assigned: aaronlev)

References

(Blocks 2 open bugs)

Details

(Keywords: access)

Attachments

(1 file)

Steps to reproduce: 1. Launch Accerciser and turn on event monitoring 2. Launch Firefox, move focus to the Location autocomplete and type something (e.g. "google") 3. Use left and right arrow to move among the characters typed. 4. Press down arrow to expand the autocomplete. Then use down and up arrow to move among the items. 5. Press left arrow to once again move among the characters in the entry. Expected results: After step 5, caret-moved events would be emitted just as they were after step 3. Actual results: After step 5, caret-moved events are no longer emitted. Additional notes: 1. It is not necessary for the entry to be part of an official autocomplete. The same results can be seen in the search entry on google.com. 2. In order to determine if this was a regression or simply something we hadn't noticed, I tried earlier builds. After going as far back as the 3rd June build and finding the bug present, I stopped looking. If it's a regression, it's not a recent one. :-)
Blocks: xula11y
Attachment #280649 - Flags: review?(Evan.Yan) → review+
Attachment #280649 - Flags: approval1.9?
Attachment #280649 - Flags: approval1.9? → approval1.9+
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: