Bug 394547. Giving focus to a tree in an autocomplete causes absence of future caret-moved events for the entry. r=evan.yan, a=dsicore